--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -64,10 +64,11 @@
 </div>
 
 
+
 <% if can? :update, @category %>    
   <div class="categories">
     <div class="wrap">
-     <h1>List of categories</h1>
+     <h2>List of categories for ADMIN</h2>
       <%= link_to "Add New Category", new_category_path %>
       <table>
         <tr>
