--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -102,6 +102,257 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="50" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IDqsMj"><img src="https://m.media-amazon.com/images/I/71ogaAK8DGL._AC_UL320_.jpg" alt="playStation" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IDqsMj">PlayStation Classic by Sony</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$30.00</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IDqsMj">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="68" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XD6I1r"><img src="https://m.media-amazon.com/images/I/81jKCiOGBxL._AC_UL320_.jpg" alt="Inflatable Pool Lounger" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>68% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XD6I1r">Solstice by Swimline Cooler Couch Inflatable Pool Lounger</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$125.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XD6I1r">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="39.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ka1mb9"><img src="https://images-na.ssl-images-amazon.com/images/I/61%2BhtCZ9c6L._SX679_.jpg" alt="Parrot Swing + Flypad" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ka1mb9">Parrot Swing + Flypad</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.00</span><span class="ori_price">$53.31</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ka1mb9">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="99.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WXO3Aw"><img src="https://m.media-amazon.com/images/I/6193HBw6A7L._AC_UL320_.jpg" alt="Electric Train Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WXO3Aw">Bachmann Rail Chief Ready To Run Electric Train Set - Ho Scale</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.99</span><span class="ori_price">$209.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WXO3Aw">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="32.13">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X3J3dF"><img src="https://m.media-amazon.com/images/I/81qqmHqBDsL._AC_UL320_.jpg" alt="Swift Stream Z-9 Camera Drone" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X3J3dF">Swift Stream Z-9 Camera Drone, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$32.13</span><span class="ori_price">$82.67</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2X3J3dF">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="7" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wy9gws"><img src="https://m.media-amazon.com/images/I/81HkWDksqFL._AC_UL320_.jpg" alt="Intex Explorer K2 Kayak" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>7% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wy9gws">Intex Explorer K2 Kayak, 2-Person Inflatable Kayak Set with Aluminum Oars and High Output Air Pump</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$74.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wy9gws">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="47.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KalBFk"><img src="https://m.media-amazon.com/images/I/816SA6wiYiL._AC_UL320_.jpg" alt="Intex Rainbow Ring Inflatable Play Center" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KalBFk">Intex Rainbow Ring Inflatable Play Center, 117" X 76" X 53", for Ages 2+</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$47.39</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2KalBFk">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WYlPFR"><img src="https://m.media-amazon.com/images/I/91ic4UhXKGL._AC_UL320_.jpg" alt="Penn Championship Tennis Balls" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WYlPFR">Penn Championship Tennis Balls - Extra Duty Felt Pressurized Tennis Balls - 6 Cans, 18 Balls</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.49</span><span class="ori_price">$23.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WYlPFR">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IDKZQD"><img src="https://m.media-amazon.com/images/I/61A-tdUEvpL._AC_UL320_.jpg" alt="Under Armour Sideline 64 Ounce Water Jug" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IDKZQD">Under Armour Sideline 64 Ounce Water Jug, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.99</span><span class="ori_price">$27.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IDKZQD">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="119.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IEUijk"><img src="https://m.media-amazon.com/images/I/71wamdtiUHL._AC_UL320_.jpg" alt="Garmin Forerunner 35" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IEUijk">Garmin Forerunner 35; Easy-to-Use GPS Running Watch, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$119.99</span><span class="ori_price">$169.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IEUijk">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="218.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XFxjuT"><img src="https://images-na.ssl-images-amazon.com/images/I/81ZQImyz3HL._SX522_.jpg" alt="Dell Monitor" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XFxjuT">Dell P Series 27-Inch Screen Led-Lit Monitor (P2719H)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$218.95</span><span class="ori_price">$299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XFxjuT">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="8.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IBCeGN"><img src="https://images-na.ssl-images-amazon.com/images/I/81kc%2BFSv18L._SX522_.jpg" alt="StarTech.com SATA to USB Cable" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IBCeGN">StarTech.com SATA to USB Cable - USB 3.0 to 2.5” SATA III Hard Drive Adapter - External Converter for SSD/HDD Data Transfer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.69</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IBCeGN">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="167.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IMmv8f"><img src="https://images-na.ssl-images-amazon.com/images/I/81sSSGp9QVL._SY879_.jpg" alt="Samsung Galaxy Tab A" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IMmv8f">Samsung Galaxy Tab A 8" 32 GB Wifi Tablet (Silver) - SM-T380NZSEXAR</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$167.99</span><span class="ori_price">$229.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IMmv8f">Shop Now at Amazon</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="37" data-price="194.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XbDWbz"><img src="https://images-na.ssl-images-amazon.com/images/I/81aQTxxcCJL._SX522_.jpg" alt="Sapphire 11265-05-20G Radeon Pulse RX 580 8GB GDDR5" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>37% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XbDWbz">Sapphire 11265-05-20G Radeon Pulse RX 580 8GB GDDR5 Dual HDMI/ DVI-D/ Dual DP OC with Backplate (UEFI) PCI-E Graphics Card Graphic Cards</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$194.99</span><span class="ori_price">$309.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XbDWbz">Shop Now at Amazon</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="42" data-price="discounted_price">
   <div class="image_box">
