--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <ul class="clearfix">
-        <li><a href="/gadgets/">CATEGORY<span>,</span></a></li>
+        <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
         <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
       </ul>      
