--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,242 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="51" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Kbnjq1"><img src="https://m.media-amazon.com/images/I/71mxd8NtQJL._SR400,400_.jpg" alt="HELLOYEE Full Face Snorkel Mask" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Kbnjq1">HELLOYEE Full Face Snorkel Mask for Adults Kids Panoramic View Snorkeling Mask Free Breathing Anti-Fog Anti-Leak Design with Detachable Camera Mount</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$29.98</span></address>
+      <p><span>Take <strong>51% off at $29.98</strong> with promo code: <strong>51PMYP9P</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Kbnjq1">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="17.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XyxTup"><img src="https://m.media-amazon.com/images/I/81el3e7kR7L._SR400,400_.jpg" alt="Packing Cubes for Travel" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XyxTup">Packing Cubes for Travel, 6 Set Travel Bag Organizer with Makeup Bag Shoe Bag & Bra Underwear Storage Bag (Grey)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.49</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $24.99</strong> with promo code: <strong>30YOJJ3Y</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XyxTup">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="101.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XCIMvi"><img src="https://m.media-amazon.com/images/I/61jSECxBZ7L._SR400,400_.jpg" alt="Outdoor Security Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XCIMvi">Outdoor Security Camera (4 Pack) , 1080P HD Security Camera System Wireless,Pet Camera,Night Vision, 2-Way Audio,2.4Ghz WiFi Smart Home Camera</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$101.99</span><span class="ori_price">$169.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $169.99</strong> with promo code: <strong>40X2MWQ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2XCIMvi">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="53.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FfglfV"><img src="https://m.media-amazon.com/images/I/61iKyECxzhL._SR400,400_.jpg" alt="Outdoor Security Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FfglfV">Outdoor Security Camera (2 Pack) ,1080P HD Security Camera System Wireless,Pet Camera,Night Vision, 2-Way Audio,2.4Ghz WiFi Smart Home Camera</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$53.99</span><span class="ori_price">$89.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $89.99</strong> with promo code: <strong>40X2MWQ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2FfglfV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IEWasG"><img src="https://m.media-amazon.com/images/I/5125oDtrozL._SR400,400_.jpg" alt="Outdoor Security Camera" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IEWasG">Outdoor Security Camera, 1080P HD Security Camera System Wireless,Pet Camera,Night Vision, 2-Way Audio,2.4Ghz WiFi Smart Home Camera</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.99</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $49.99</strong> with promo code: <strong>40JH7GQ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IEWasG">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="17.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WvcQHP"><img src="https://m.media-amazon.com/images/I/81y1Usmn91L._SR400,400_.jpg" alt="Dtown Insulated Hydration Pack Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WvcQHP">Dtown Insulated Hydration Pack Backpack for Hiking Running Cycling, with 2L Water Bladder Keeps Liquid Cool up to 4 Hours</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.49</span><span class="ori_price">$24.98</span></address>
+      <p><span>Take <strong>30% off at $24.98</strong> with promo code: <strong>30GL2FL4</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WvcQHP">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ICCt4s"><img src="https://m.media-amazon.com/images/I/81GLpdFnU5L._SR400,400_.jpg" alt="Laptop Sleeve Bag" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ICCt4s">Voova 13 13.3 13.5 inch Laptop Sleeve Bag Case with Handle Compatible with MacBook Air, MacBook Pro, Asus, Acer, HP with Carrying Pouch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $23.99</strong> with promo code: <strong>505YHJYP</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 12, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ICCt4s">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="14.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IBGSVc"><img src="https://m.media-amazon.com/images/I/712vaeDnI-L._SR400,400_.jpg" alt="BISON DENIM Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IBGSVc">BISON DENIM Backpack for Men,15.6 inch Waterproof Laptop Backpack with USB Charging Port and Anti Theft Combo Lock</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.70</span><span class="ori_price">$48.99</span></address>
+      <p><span>Take <strong>70% off at $48.99</strong> with promo code: <strong>70EAJILS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IBGSVc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MGHE8R"><img src="https://m.media-amazon.com/images/I/817Ui7jr0nL._SR400,400_.jpg" alt="Mayten 15.6 Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MGHE8R">Mayten 15.6 Laptop Backpack Lightweight Computer Shoulder Bag for Travel and Business Water Resistant and Multi-Functional Fits 15.6 Inches and Below.</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>30% off at $39.99</strong> with promo code: <strong>3039PTB5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 17, 2019 at 06:00 AM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MGHE8R">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X18hJt"><img src="https://m.media-amazon.com/images/I/612Gdifrm7L._SR400,400_.jpg" alt="Havit Ergonomic Vertical Mouse" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X18hJt">Havit Ergonomic Vertical Mouse RGB Backlit Wired Computer Mice 6 Adjustable DPI(800-1600-2400-3200-4800-6400) 6 Buttons for Laptop PC Desktop, Notebook</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>40% off at $19.99</strong> with promo code: <strong>401ZYUJ1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2X18hJt">Use Code</a>
+  </div>
+</div>
+
+
 <div class="card clearfix" data-score="25" data-price="23.96">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2KNcSZc"><img src="https://m.media-amazon.com/images/I/71A-ATHdBXL._SR400,400_.jpg" alt="Qmadix Liquid Screen Protector" /></a>
